이미지 안나오는 것, 문법 오류 수정